PR14655: more politely fail if kallsyms_lookup_name unexported

* buildrun.cxx (compile_pass): Look for said export.
* runtime/sym.c: Provide a _stp_error()-laden backup.